--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^2.8.8",
+    "faker-br": "^0.4.1",
     "js-cookie": "^3.0.1",
     "next": "12.1.4",
     "react": "18.0.0",
@@ -30,6 +31,7 @@
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "babel-plugin-inline-react-svg": "^2.0.1",
     "babel-plugin-styled-components": "^2.0.6",
+    "cypress": "^14.3.0",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.4",
     "eslint-config-prettier": "8.5.0",
