--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,23 +4,13 @@ on:
   pull_request
 
 jobs:
-  cypress-run:
-    runs-on: ubuntu-24.04
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 18 # Ou a versão que você usa
-
-      - name: Install dependencies with Yarn
-        run: yarn install --frozen-lockfile
-
-      - name: Cypress run
-        uses: cypress-io/github-action@v6
-        with:
-          build: yarn build
-          start: yarn start
+    cypress-run:
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v3
+            - run: yarn install --frozen-lockfile
+            - name: Cypress run
+              uses: cypress-io/github-action@v3
+              with:
+                  build: yarn  run build
+                  start: yarn  start
