--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,14 +3,21 @@ name: Cypress Tests
 on: 
   pull_request
 
-jobs:
-    cypress-run:
+jjobs:
+    cypress-test:
+        needs: test
+        runs-on: ubuntu-latest
         steps:
-            - name: Checkout
+            - name: Check out repository code
               uses: actions/checkout@v3
             - run: yarn install --frozen-lockfile
-            - name: Cypress run
-              uses: cypress-io/github-action@v3
+
+            - name: run cypress tests in chrome
+              uses: cypress-io/github-action@v5
+              timeout-minutes: 10
               with:
-                  build: yarn  run build
-                  start: yarn  start
+                  browser: chrome
+                  record: true
+                  build: yarn build
+                  start: yarn start
+                  wait-on: 'http://localhost:3000'
