--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,5 +14,6 @@ jobs:
         uses: cypress-io/github-action@v6
         with:
           build: yarn dev
-          start: yarn cypress open
+          start: yarn cypress run
           browser: chrome
+
