--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
           yarn clean:reports
 
       - name: Run Cypress with Mochawesome
-        usos : cypress-io/github-action@v6
+        uses : cypress-io/github-action@v6
         with:
           browser: chrome
           record: true
