--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Cypress Tests
 
 on:
   pull_request:
-    branches: [main] # ou a branch que quiser monitorar
+    branches: [main]
 
 jobs:
   cypress-run:
@@ -17,29 +17,24 @@ jobs:
         with:
           node-version: 18
 
-      - name: Install Dependencies (Yarn)
+      - name: Install Dependencies
         run: yarn install --frozen-lockfile
 
-      - name: Clean and Prepare Report Folders
-        run: |
-          yarn clean:reports
+      - name: Clean Reports Folder
+        run: yarn clean:reports
 
-      - name: Run Cypress with Mochawesome
-        uses : cypress-io/github-action@v6
-        with:
-          browser: chrome
-          record: true
-          build: yarn dev
-          start: yarn cypress run --reporter mochawesome
-          wait-on: 'http://localhost:3000'
+      - name: Start App and Run Cypress Tests with Mochawesome
+        run: |
+          yarn dev &
+          yarn cypress run --reporter mochawesome
 
       - name: Merge Mochawesome JSON Reports
         run: yarn combine-reports
 
-      - name: Generate HTML Report from Mochawesome JSON
+      - name: Generate HTML Report from JSON
         run: yarn generate-report
 
-      - name: Upload Mochawesome Report to GitHub Artifacts
+      - name: Upload Mochawesome Report
         uses: actions/upload-artifact@v4
         with:
           name: mochawesome-report
