--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^2.8.8",
     "faker-br": "^0.4.1",
     "js-cookie": "^3.0.1",
+    "mochawesome": "^7.1.3",
     "next": "12.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
