--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -27,11 +27,10 @@ jobs:
         with:
           start: yarn dev
           wait-on: 'http://localhost:3000'
-          browser: chrome
-          command: yarn cypress run --reporter mochawesome
+          command: yarn cypress run --reporter mochawesome --browser chrome
 
       - name: Upload Mochawesome Report
         uses: actions/upload-artifact@v4
         with:
           name: mochawesome-report
-          path: cypress/reports/mochareports
+          path: mochawesome-report
